# lsp-cli

./: .gitignore  .gitmodules  AGENTS.md  BUG.md  CAPABILITIES.md  Cargo.toml  DOWNLOAD.md  GOTCHAS.md  INSTALL_LSP_SERVERS.md  LSP.md  Makefile  README.md  SMELLS.md  TASK.md  TODO.md  clippy.toml  deny.toml  opencode.json
.github/workflows/: audit.yml  check.yml  ci.yml
data/filetypes/: c.yaml  cpp.yaml  cs.yaml  cuda.yaml  go.yaml  gomod.yaml  gowork.yaml  java.yaml  javascript.yaml  lua.yaml  objc.yaml  objcpp.yaml  python.yaml  ruby.yaml  rust.yaml  typescript.yaml
data/lsp/: ada_ls.yaml  agda_ls.yaml  aiken.yaml  air.yaml  alloy_ls.yaml  anakin_language_server.yaml  angularls.yaml  ansiblels.yaml  antlersls.yaml  arduino_language_server.yaml  asm_lsp.yaml  ast_grep.yaml  astro.yaml  atlas.yaml  atopile.yaml  autohotkey_lsp.yaml  autotools_ls.yaml  awk_ls.yaml  azure_pipelines_ls.yaml  bacon_ls.yaml  ballerina.yaml  basedpyright.yaml  bashls.yaml  bazelrc_lsp.yaml  beancount.yaml  bicep.yaml  bitbake_language_server.yaml  blueprint_ls.yaml  bqls.yaml  bright_script.yaml  brioche.yaml  buck2.yaml  buddy_ls.yaml  buf_ls.yaml  bzl.yaml  c3_lsp.yaml  cairo_ls.yaml  ccls.yaml  cds_lsp.yaml  cir_lsp_server.yaml  (+324 more)
playground/: README.md
playground/c/: compile_commands.json
playground/c/include/: order.h
playground/c/src/: main.c  order.c
playground/c/src/format/: formatter.c
playground/cpp/: compile_commands.json
playground/cpp/include/: order.hpp
playground/cpp/src/: main.cpp  order.cpp
playground/cpp/src/report/: formatter.cpp
playground/csharp/: Program.cs
playground/csharp/Formatting/: OrderFormatter.cs
playground/csharp/Models/: Order.cs  OrderItem.cs
playground/csharp/Services/: OrderService.cs
playground/go/: go.mod
playground/go/cmd/playground/: main.go
playground/go/internal/order/: order.go
playground/go/internal/report/: report.go
playground/java/: pom.xml
playground/java/src/main/java/playground/: App.java
playground/java/src/main/java/playground/order/: Order.java  OrderItem.java  OrderService.java
playground/java/src/main/java/playground/order/format/: OrderFormatter.java
playground/js/: jsconfig.json  package-lock.json  package.json
playground/js/src/: index.js  order.js
playground/js/src/report/: formatter.js
playground/python/: main.py  pyproject.toml
playground/python/app/: __init__.py  models.py
playground/python/app/services/: __init__.py  orders.py  report.py
playground/rust/: Cargo.toml
playground/rust/src/: main.rs  order.rs
playground/rust/src/report/: mod.rs
playground/typescript/: package-lock.json  package.json
playground/typescript/src/: index.ts  order.ts
playground/typescript/src/report/: formatter.ts
scripts/: update_readme_commands.py
src/: cli.rs  config.rs  config_tests.rs  detect.rs  env_vars.rs  error.rs  fs.rs  fs_err.rs  hash.rs  lsp.rs  main.rs  mason_platform.rs  mason_registry.rs  mason_resolve.rs  mason_template.rs  runtime_state.rs  server_stderr.rs  suggest.rs  system_log.rs  test_support.rs  update.rs
src/cli/: raw.rs  resolve.rs  tests.rs
src/cli/tests/: detect_and_queries.rs  listing_and_symbols.rs  misc_commands.rs
src/commands/: agent_skill.rs  agent_skill.template.md  build_index.rs  callees.rs  callers.rs  command_list.rs  common.rs  common_tests.rs  completion.rs  completion_clap_complete_bash_tests.rs  daemon.rs  declaration.rs  definition.rs  detect.rs  diagnostics.rs  format.rs  grep.rs  languages.rs  list_files.rs  list_functions.rs  list_symbols.rs  mod.rs  references.rs  run.rs  server_capabilities.rs  servers.rs  stop.rs  symbol_query.rs  update.rs
src/commands/daemon/: process.rs  protocol.rs  tests.rs
src/commands/diagnostics/: tests.rs
src/commands/format/: tests.rs
src/commands/server_capabilities/: tests.rs
src/commands/symbol_query/: kinds.rs  render.rs  tests.rs
src/lsp/: capabilities.rs  client.rs  custom_types.rs  diagnostics.rs  full_content.rs  jsonrpc.rs  mod.rs  source_cache.rs  symbols.rs  transport.rs  uri.rs
src/lsp/client/: background.rs  process_io.rs  requests.rs  tests.rs  tests_initialize_stderr.rs  tests_logging.rs
src/lsp/symbols/: tests.rs
src/mason/: http.rs  install.rs  link.rs  mod.rs  platform.rs  registry.rs  resolve.rs  source.rs  template.rs
src/mason/install/: artifacts.rs  tests.rs
src/mason/link/: tests.rs
src/mason/registry/: cache.rs  tests.rs
src/update/: tests.rs
