[package]
name = "lsp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.54"
flate2 = "1.1.5"
lsp-types = "0.97.0"
regex = "1.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shlex = "1.3.0"
tar = "0.4.44"
tempfile = "3.23.0"
url = "2.5.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
