[package]
name = "lsp-cli"
version = "0.1.2"
edition = "2024"
description = "Command-line tool for talking to Language Server Protocol (LSP) servers from the terminal."
license = "Apache-2.0"
repository = "https://github.com/segoon/lsp-cli"
readme = "README.md"
keywords = ["lsp", "cli", "language-server"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["data/*"]

[dependencies]
clap = { version = "4.5.38", features = ["derive", "string"] }
clap_complete = "4.6.3"
flate2 = "1.1.5"
humantime = "2.3.0"
lsp-types = "0.97.0"
regex = "1.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
shlex = "1.3.0"
tar = "0.4.44"
tempfile = "3.23.0"
url = "2.5.7"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
